--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.2.1",
+    "node-emoji": "^1.8.1",
     "opusscript": "0.0.4"
   },
   "devDependencies": {}
